image size is now fixed to auto no stretching is done.

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -1,1 +1,7 @@
 // Put your custom SCSS code here
+
+img {
+  max-width: 100%;
+  height: auto;
+  image-rendering: auto;
+}
